add: User roles in tokens & api validations phase 1, closes #8